--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -28,7 +28,7 @@
 	<% end %>
 </div>
 <!--modalopml-->
-<%= form_for "formModal", :url => "/searches", method: :POST, html: { id: "formModal"} do |f| %>
+<%= form_for "formModal", :url => "/searches", method: :POST, html: { class: "formModal"} do |f| %>
 	<div class="row-fluid">
 		<div class="span1"></div>
 		<div class="span10">
