--- a/ZONE-watcher/app/views/searches/_left_menu.html.erb
+++ b/ZONE-watcher/app/views/searches/_left_menu.html.erb
@@ -6,7 +6,7 @@
   <%end%>
 </div>
 
-<ul class="nav nav-list bs-docs-sidenav" style="max-width: 180px;">
+<ul class="nav nav-list">
   <% @searches.each do |curSearch| %>
 
           <% descriptionSearchBox  = render "searches/reminder_panel", :localSearch => curSearch %>
