now we cant make searches on all the information present in database

--- a/ZONE-watcher/app/views/items/_items.html.erb
+++ b/ZONE-watcher/app/views/items/_items.html.erb
@@ -12,7 +12,7 @@
          cl = "pull-left clear-left"
        end
     %>
-    <div class="well item-bloc <%=cl%> span6 <%= similarityColor%>" local-uri="<%= item.localURI %>">
+    <div class="well item-bloc <%=cl%> span6 <%= similarityColor%>" local-uri="<%= item_path(:id => item.uri) %>">
       <div class="item_container" sourceid="<%= id %>"></div>
       <div class="item_wait" sourceid="<%= id%>">
         <a href="<%= item.localURI%>"><i class=" icon-refresh"></i></a>
