try to fix left menu cross bug

--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -4,16 +4,11 @@
   <div class="row">
 
     <div class="span2" >
-      <div data-spy="affix" data-offset-top="0">
+      <div data-spy="affix" data-offset-top="0" style="width:166px !important;">
         <%= render "searches/left_menu", :searches => @searches %>
       </div>
     </div>
 
-    <script>
-        /*$('.bs-docs-sidenav').affix({
-            offset: { x: 0 }
-        })*/
-    </script>
     <div class="span10">
 
 
