--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -357,3 +357,11 @@ a.label:visited{
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
   text-shadow: none;
 }
+
+.reminder-pannel-rss{
+  height: 50px; padding-left: 0px; padding-right: 0px; padding-top: 12px;
+}
+
+.formModal{
+  min-width: 270px;
+}
