fix too large page bug

--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 
 
 
-  <div class="row">
+  <div class="row-fluid">
 
     <div class="span2" >
       <div data-spy="affix" data-offset-top="0" style="width:166px !important;">
