--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <%= stylesheet_link_tag("/jquery.sexy-combo/css/sexy-combo.css") %>
   <%= stylesheet_link_tag("/jquery.sexy-combo/css/sexy/sexy.css") %>
   <%= stylesheet_link_tag("/bootstrap/css/bootstrap-responsive.css") %>
+  <%= stylesheet_link_tag("/custom-scrollbar-plugin/css/jquery.mCustomScrollbar.css") %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
 
   <%= javascript_include_tag "application" %>
@@ -20,6 +21,7 @@
   <%= javascript_include_tag "/jwplayer/jwplayer.js" %>
   <%= javascript_include_tag "bootstrapx-clickoverx" %>
   <%= javascript_include_tag "bootstrapx-clickover" %>
+  <%= javascript_include_tag("/custom-scrollbar-plugin/js/jquery.mCustomScrollbar.concat.min.js")%>
   <%= favicon_link_tag "favicon.png" %>
   <%= javascript_tag do %>
  	I18n.defaultLocale = "<%= I18n.default_locale %>";
@@ -63,8 +65,6 @@
       </div>
     </div>
   </div>
-
-
 
   <div class="container">
     <div  id="page-content">
