add security check on searches. Now we cant print the timeline of other users and print the search of a user.

--- a/ZONE-watcher/app/views/sources/_form.html.erb
+++ b/ZONE-watcher/app/views/sources/_form.html.erb
@@ -41,7 +41,13 @@
     </div>
     </div>
       <div class="modal-footer">
-        <div class="clear"><%= f.submit t("source.new.add"), :class => 'btn btn-success' %></div>
+        <div class="clear">
+          <%if type == "new"%>
+            <%= f.submit t("source.new.add"), :class => 'btn btn-success' %>
+          <%else%>
+            <%= f.submit t("source.new.edit"), :class => 'btn btn-success' %>
+          <%end%>
+        </div>
       </div>
 
    	</div>
