--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -114,7 +114,7 @@
     <h3 id="myModalLabel"><%= t("source.new.title")%></h3>
   </div>
   <div class="modal-body">
-    <%= render 'form' %>
+    <%= render 'form', :type => "new" %>
   </div>
 </div>
 
