--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -357,6 +357,11 @@ a.label:visited{
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
   text-shadow: none;
 }
+.label-selected[href] , .label-selected[href]:visited, .label-selected[href]:hover{
+  border-color: red;
+  border-style: solid;
+  border-width: 2px;
+}
 
 //left menu
 .reminder-pannel-rss{
