--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -11,7 +11,7 @@
 
     <%if @itemsNumber == 0%>
       <div class="row-fluid">
-        <%= render "home/search_tool"%>
+        <%= render "home/search_dino", :page=>"search" %>
       </div>
     <%end%>
 
