on advanced filtering tool, better interractions for filters autocomplete

--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -283,7 +283,7 @@
 							</div>
 							<div class="row-fluid">
 								<div class="span12">
-									<input class="span12" id="keyword" type="text" placeholder="<%= raw t 'newmodal.filtering.title' %>" onkeypress="if (event.keyCode == 13) return false;" onkeyup="askUpdateKeywordTable();return false;">
+									<input class="span12" id="keyword" type="text" placeholder="<%= raw t 'newmodal.filtering.title' %>" onkeypress="if (event.keyCode == 13) return false;" onkeyup="return false;">
 								</div>
 							</div>
 							<div class="row-fluid">
