--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -19,6 +19,24 @@
 			<%end%>
 		<%end%>
 		<div class="row-fluid">
+          <% if @item.uri.starts_with?('https://twitter.com') || @item.uri.starts_with?('http://twitter.com')  %>
+            <blockquote class="twitter-tweet" data-conversation="none" lang="<%= I18n.locale %>" data-theme="Goth">
+              <p><%= @item.props["http://purl.org/rss/1.0/description"][:value][0]%></p>
+              &mdash; <%= @item.props["http://zone-project.org/model/plugins/twitter#author"][:value][0] %>
+              <a href="<%= @item.uri%>">
+                <%=
+                    begin
+                      date = DateTime.parse(@item.props["http://purl.org/rss/1.0/pubDate"][:value][0])
+                      date.strftime(t("items.dateFormat"))
+
+                    rescue
+                    end
+                %>
+              </a>
+            </blockquote>
+            <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <%else%>
+
 			<!--header news part -->
             <img src="<%= @item.getTypePicture%>" class="littleCircleImage" width=30 height=30>
             <a class="titleItem" target="_blank" href= "<%= @item.uri %>">
@@ -50,6 +68,7 @@
         		end %>
 			</div>
 
+          <%end%>
 			<div class="btn-toolbar tags-toolbar">
               <% if @item.getLang() != nil%>
                 <div class="btn-group btn-group-label btn-wrap">
